...
    <string name="text_dtAtualizado_format">"Atualizado: %s"</string>
    <string name="est_total">"%d"</string>
    <string name="est_criadas">"%d"</string>
    <string name="est_finalizadas">"%d"</string>

    <!-- ContentDescription -->
    <string name="salvar_nota">Salvar nota</string>
    <string name="editar_nota">Editar nota</string>
    <string name="notas_criadas">Total de notas criadas</string>
    <string name="notas_ativas">Notas ativas</string>
    <string name="notas_finalizadas">Notas finalizadas</string>
    <string name="icone_do_aplicativo">Ícone do aplicativo</string>
    <string name="criar_anotacao">Criar anotação</string>

    <!-- AlertDialog -->
    <string name="alert_title">Deseja remover a anotação?</string>
    <string name="alert_message">Clique OK para excluir.</string>
    <string name="default_ok">OK</string>
    <string name="default_cancel">Cancelar</string>
...
